adding new comment

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body onload="loadItemDataToMenu(); loadCustomerDataToMenu();">
     <div class="section mx-0 px-0" id="MENU">
       <div class="row">
-        <!-- START-PANE -->
+        <!-- START-SECTION -->
         <div
           class="col-sm-1 col-xs-2 bg-black px-0 mx-0 pb-4 overflow-hidden min-vh-100 d-flex flex-column align-items-center"
         >
@@ -155,7 +155,7 @@
           </div>
         </div>
 
-        <!-- MIDDLE-PANE -->
+        <!-- MIDDLE-SECTION -->
         <div
           class="col-xxl-8 col-xl-7 col-xlg-7 col-sm-11 col-xs-10 mx-0 px-0 d-flex flex-column align-items-center"
           id="middlePane"
@@ -317,7 +317,7 @@
             </ul>
             <hr />
 
-            <!-- CONTENT-PANE -->
+            <!-- CONTENT-SECTION -->
             <div
               class="tab-content mx-lg-4 overflow-hidden d-flex flex-column align-items-center"
               id="pills-tabContent"
@@ -421,7 +421,7 @@
           </div>
         </div>
 
-        <!-- END-PANE -->
+        <!-- END-SECTION -->
         <div
         class="col px-0 mx-0 d-flex flex-column align-items-center"
         style="background-image: url('img/byegerBg.jpg'); 
