--- a/report.html
+++ b/report.html
@@ -10,7 +10,7 @@
   <body onload="loadOrdersToReport()">
     <div class="section mx-0 px-0 overflow-hidden" id="REPORT">
       <div class="row">
-        <!-- START-PANE -->
+        <!-- START-SECTION -->
         <div
           class="col-sm-1 col-xs-2 bg-black px-0 mx-0 pb-4 overflow-hidden min-vh-100 d-flex flex-column align-items-center"
         >
@@ -154,7 +154,7 @@
           </div>
         </div>
 
-        <!-- MIDDLE-PANE -->
+        <!-- MIDDLE-SECTION -->
         <div
           class="col px-0 overflow-hidden pe-3"
           style="background-image: url(img/blackImg.jpg); overflow: hidden"
