--- a/update.html
+++ b/update.html
@@ -10,7 +10,7 @@
   <body onload="loadItemsToDatabase(); loadCustomersToDatabase()">
     <div class="section mx-0 px-0 overflow-hidden" id="UPDATE">
       <div class="row">
-        <!-- START-PANE -->
+        <!-- START-SECTION -->
         <div
           class="col-sm-1 col-xs-2 bg-black px-0 mx-0 pb-4 overflow-hidden min-vh-100 d-flex flex-column align-items-center"
         >
@@ -154,7 +154,7 @@
           </div>
         </div>
 
-        <!-- ITEM-DATABASE-PANE -->
+        <!-- ITEM-DATABASE-SECTION -->
         <div
           class="col-md-5 col-sm-11 col-xs-10 min-vh-100 px-0 overflow-hidden"
           style="background-image: url(img/blackImg.jpg)"
@@ -191,7 +191,7 @@
           <div class="bg-black mt-5 pb-5"></div>
         </div>
 
-        <!-- CUSTOMER-DATABASE-PANE -->
+        <!-- CUSTOMER-DATABASE-SECTION -->
         <div
           class="col-md-6 col-xs-12 min-vh-100 px-0 overflow-hidden"
           style="background-image: url(img/blackImg.jpg)"
